added login/register push

--- a/html/index.html
+++ b/html/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome - Quiz App</title>
-    <link rel="stylesheet" href="/Users/ruthciuclea/proiecttw/proiect-tw-echipa-6/style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <div class="app-container" style="justify-content: center; align-items: center; background-color: #fdf6e3;">
-        
         <div class="card" style="text-align: center; width: 100%; max-width: 400px;">
             <h1 style="color: #4ecdc4; margin-bottom: 20px;">Quiz & Grade</h1>
-            <p style="margin-bottom: 30px; color: #666;">Select your role to continue</p>
+            <p style="margin-bottom: 30px; color: #666;">Welcome to the best platform for school management.</p>
 
-            <button class="primary-btn" onclick="window.location.href='student_dashboard.html'">
-                Login as Student
+            <button class="primary-btn" onclick="window.location.href='login.html'">
+                LOGIN
             </button>
             <br><br>
-            <button class="secondary-btn" style="width:100%" onclick="window.location.href='professor_quizzes.html'">
-                Login as Professor
+            <button class="secondary-btn" style="width:100%" onclick="window.location.href='register.html'">
+                CREATE ACCOUNT
             </button>
         </div>
-
     </div>
 </body>
 </html>
