--- a/html/student_dashboard.html
+++ b/html/student_dashboard.html
@@ -14,7 +14,7 @@
                 <a href="student_dashboard.html" class="nav-item active">
                     <span class="nav-icon">🏫</span> <span>My Classes</span>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="student_stats.html" class="nav-item">
                     <span class="nav-icon">📊</span> <span>Stats</span>
                 </a>
                 <a href="index.html" class="nav-item">
