--- a/html/create_quiz.html
+++ b/html/create_quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Quiz</title>
-    <link rel="stylesheet" href="/Users/ruthciuclea/proiecttw/proiect-tw-echipa-6/style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <div class="app-container">
@@ -58,7 +58,7 @@
         </main>
     </div>
 
-    <script src="/Users/ruthciuclea/proiecttw/proiect-tw-echipa-6/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script>
         function handleCreate() {
             const name = document.getElementById('quizName').value;
