--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Quiz App</title>
-    <link rel="stylesheet" href="/Users/ruthciuclea/proiecttw/proiect-tw-echipa-6/style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <div class="app-container" style="justify-content: center; align-items: center; background-color: #fdf6e3;">
@@ -28,6 +28,6 @@
             </p>
         </div>
     </div>
-    <script src="/Users/ruthciuclea/proiecttw/proiect-tw-echipa-6/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
